feat: gameplay v0.1.0
